--- a/examples/introduction.ipynb
+++ b/examples/introduction.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,12 +18,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "w = ipyjs.ExampleWidget()\n",
-    "w"
+    "w = ipyjs.ExampleWidget()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done.\n"
+     ]
+    }
+   ],
+   "source": [
+    "code = '''\n",
+    "function wait(seconds) {\n",
+    "  var start = new Date();\n",
+    "  console.log(start)\n",
+    "  //empty while loop until the required amount of time has passed\n",
+    "  while((new Date() - start) / 1000 < seconds);\n",
+    "}\n",
+    "\n",
+    "var begin = performance.now();\n",
+    "\n",
+    "console.log(\"start\");\n",
+    "\n",
+    "wait(1);\n",
+    "wait(1);\n",
+    "wait(1);\n",
+    "wait(1);\n",
+    "wait(1);\n",
+    "wait(1);\n",
+    "wait(1);\n",
+    "wait(1);\n",
+    "wait(1);\n",
+    "wait(1);\n",
+    "\n",
+    "console.log(\"finish in\", performance.now() - begin, \"ms\");\n",
+    "'''\n",
+    "w.eval(code)"
    ]
   },
   {
@@ -31,14 +72,33 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "assert w.value == 'Hello World'"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -52,9 +112,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
